# portfolio-studio

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: push-registry.yaml  service-ci-dev.yaml
src/: main.rs
src/components/: mod.rs
src/components/admin/: mod.rs  project_list.rs
src/components/projects/: mod.rs  project_description.rs  project_tags.rs
src/observability/: mod.rs  propagators.rs
src/repository/: project_repository.rs
templates/admin-panel/: project-edit.hbs  project-list.hbs
