[package]
name = "portfolio-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
handlebars = "6.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
http = "1.3.1"
firestore = "0.44.1"
futures-core = "0.3.31"
futures-util = "0.3.31"

opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-stdout = "0.27.0"
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
opentelemetry-stackdriver = { version = "0.24.0" }